# AccurionTools

./: a.out  out.txt  pyproject.toml  setup.py
src/pyccurion/: __init__.py  __main__.py  main.py  reader.py
src/pyccurion/nanofilm/ipconnection/: __init__.py  socketio.py
src/pyccurion/nanofilm/ndimage/: __init__.py  io.py  io_old.py
src/pyccurion/nanofilm/ndimage/filters/: __init__.py  filters.py
tests/: Image_Read.py  out  out.txt  out2.txt
