[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyccurion"
version = "1.0.0"
dependencies = ["numpy","pandas", "scipy"]
authors = [
  { name="Riccardo Galafassi", email="rigal@live.it" },
]
description = "Accurion tools"
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.setuptools.packages.find]
where = ["src"]